// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParentRecordInfo renders with parent record 1`] = `
<div>
  <span>
    Part of 
  </span>
  <Link
    to="/literature/1234"
  >
    A title of book
  </Link>
</div>
`;

exports[`ParentRecordInfo renders with subtitle and pages in parent record 1`] = `
<div>
  <span>
    Part of 
  </span>
  <Link
    to="/literature/1234"
  >
    A title of book
    <span>
       : 
      A subtitle
    </span>
  </Link>
  <span>
    , 
    1
    -
    10
  </span>
</div>
`;
